-Fix bug when we copy/paste cell and row/column has layout parameters
-Bug fix

2000-11-11-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now kspread_dlg_layout works when you select an entire column/row(s)

2000-11-16-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can insert/remove multiple column/row ( select area )

2000-11-20-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can insert/remove multiple cells

2000-11-21-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can copy and insert in same time (For the moment just for column/row)

2000-11-22-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now kspread understands complex number
you can add /sub complex number
COMPLEX, IMREAL, IMAGINARY, IMSUB, IMSUM

2000-11-28-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Add new math functions IMDIV, SUMPRODUCT  , SUMX2PY2 ,    SUMX2MY2    ,  SUM2XMY

2000-12-02-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Add new functions IMCOS, IMSIN, IMPOWER, IMSQRT, IMEXP, IMLN
Add new functions ISEVEN, ISODD, ODD, EVEN, DELTA

2000-12-03-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
Now you can validate on integer
Now you can validate on text length ( when value is a string)
Add RANDBETWEEN function

2000-12-05-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can hide/show column/row

2000-12-08-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can configure the number of page when you begin kspread (when you don't specify
a file name)