@@ -805,11 +805,6 @@ public:
     const QBrush& emptyBrush() const { return m_emptyBrush; }
     const QColor& emptyColor() const { return m_emptyColor; }
 
-    /**
-    * used for refreshing view when you hide/show scrollbar
-    */
-    void refreshInterface();
-
 signals:
     void sig_updateView( KSpreadTable *_table );
     void sig_updateView( KSpreadTable *_table, const QRect& );
