@@ -159,21 +159,6 @@ public:
      */
     KoDocument *hitTest( const QPoint &pos );
 
-     /**
-     * hide/show scrollbar
-     */
-    void setShowVerticalScrollBar(bool _show) {   m_bVerticalScrollBarShow=_show;}
-    void setShowHorizontalScrollBar(bool _show) {   m_bHorizontalScrollBarShow=_show;}
-
-    bool getShowVerticalScrollBar() { return  m_bVerticalScrollBarShow;}
-    bool getShowHorizontalScrollBar() {  return  m_bHorizontalScrollBarShow;}
-
-    /**
-    * completion mode
-    */
-
-    KGlobalSettings::Completion completionMode( ) { return m_iCompletionMode;}
-    void setCompletionMode( KGlobalSettings::Completion _complMode) {  m_iCompletionMode=_complMode;}
 
     void initConfig();
 
@@ -372,7 +357,7 @@ public slots:
     void slotTableShown( KSpreadTable*_table );
     void slotTableRemoved( KSpreadTable*_table );
     void slotTableActivated( KSpreadTable* table );
-    void slotRefreshView( KSpreadTable* table );
+    void slotRefreshView( );
 
     virtual int leftBorder() const;
     virtual int rightBorder() const;
@@ -608,17 +593,6 @@ private:
      * Holds a guarded pointer to the transformation toolbox.
      */
     QGuardedPtr<KoTransformToolBox> m_transformToolBox;
-
-    /**
-    * bool which define if you can show scroolbar
-    */
-    bool m_bVerticalScrollBarShow;
-    bool m_bHorizontalScrollBarShow;
-
-    /**
-    * completion mode 
-    */
-    KGlobalSettings::Completion m_iCompletionMode;
 };
 
 #endif
